examples/example_064/subdir/example_064.v
Require Import foo.  Fail Check A.
